--- a/application/package.json
+++ b/application/package.json
@@ -1,16 +1,16 @@
 {
-  "proxy": "http://localhsot:5000",
+  "proxy": "http://localhost:5000",
   "name": "application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "axios": "0.26.0",
+    "node-sass": "7.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-select": "^3.0.4"
+    "react-scripts": "5.0.0",
+    "react-select": "5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
